tests/diagnostics/statements/bindings/unknown_type/expect.txt
# exit: 1
input/main.lang0:2:8: error: unknown type 'foo'
      x: foo := 1
         ^
